<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <data>

        <variable
            name="fragment"
            type="com.example.saytheword.app.ui.home.HomeFragment" />

        <variable
            name="viewmodel"
            type="com.example.saytheword.app.ui.home.HomeViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:fontFamily="@font/resolve"
            android:layout_marginTop="60dp"
            android:textColor="@color/colorMain"
            android:text="@string/fragment_home_logo_placeholder"
            android:textSize="25sp"
            android:id="@+id/fragment_home_logo_tv"/>


        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/fragment_home_play_button_height"
            app:layout_constraintTop_toBottomOf="@id/fragment_home_logo_tv"
            android:layout_marginTop="@dimen/home_play_button_margin_vertical"
            android:layout_marginHorizontal="@dimen/home_buttons_margin_horizontal"
            app:cardBackgroundColor="@color/background"
            app:strokeWidth="3dp"
            app:strokeColor="@color/colorMain"
            app:cardCornerRadius="@dimen/fragment_home_buttons_corner_radius"
            android:onClick="@{() -> viewmodel.onPlayButtonClicked()}"
            android:id="@+id/fragment_home_play_button_cv">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/colorMain"
                android:fontFamily="@font/resolve"
                android:textSize="@dimen/fragment_home_play_text_size"
                android:text="@string/fragment_home_play_button_text"
                android:id="@+id/fragment_home_play_button_tv"/>

        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            app:layout_constraintTop_toBottomOf="@id/fragment_home_play_button_cv"
            android:layout_marginTop="@dimen/home_small_buttons_margin_vertical"
            android:layout_marginHorizontal="@dimen/home_small_buttons_margin_horizontal"
            app:cardBackgroundColor="@color/background"
            app:strokeWidth="2dp"
            app:strokeColor="@color/colorAccent"
            app:cardCornerRadius="@dimen/fragment_home_buttons_corner_radius"
            android:onClick="@{() -> viewmodel.onShopButtonClicked()}"
            android:id="@+id/fragment_home_shop_button_cv">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/colorAccent"
                android:fontFamily="@font/resolve"
                android:textSize="@dimen/fragment_home_small_button_text_size"
                android:text="@string/fragment_home_shop_button_text"
                android:id="@+id/fragment_home_shop_button_tv"/>

        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            app:layout_constraintTop_toBottomOf="@id/fragment_home_shop_button_cv"
            android:layout_marginTop="@dimen/home_small_buttons_margin_vertical"
            android:layout_marginHorizontal="@dimen/home_small_buttons_margin_horizontal"
            app:cardBackgroundColor="@color/background"
            app:strokeWidth="2dp"
            app:strokeColor="@color/colorAccent"
            app:cardCornerRadius="@dimen/fragment_home_buttons_corner_radius"
            android:onClick="@{() -> viewmodel.onManualButtonClicked()}"
            android:id="@+id/fragment_home_how_to_play_button">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/colorAccent"
                android:fontFamily="@font/resolve"
                android:textSize="@dimen/fragment_home_small_button_text_size"
                android:text="@string/fragment_home_manual_button_text"
                android:id="@+id/fragment_home_manual_button_tv"/>

        </com.google.android.material.card.MaterialCardView>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:fontFamily="@font/resolve"
            android:textSize="@dimen/fragment_home_credit_text_size"
            android:layout_marginBottom="@dimen/fragment_home_credit_margin_bottom"
            android:textColor="#E4E6EB"
            android:text="@string/mischak_copyright"
            android:id="@+id/fragment_home_credit"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>